# rudeirer.wtf

./: README.md
client/: README.md  package-lock.json  package.json  vue.config.js
client/public/: index.html  manifest.json
client/public/data/: comp2.txt  wasmagrudi
client/public/data/gameboy/: soko.gb
client/src/: App.vue  main.ts  router.ts
client/src/assets/scripts/: amebo.js
client/src/components/: Footer.vue  GameBoy.vue  GlobalAlert.vue  Header.vue  NewsItem.vue  RainbowText.vue  RudiSpinner.vue
client/src/components/quiz/: Highscore.vue  QuizDisplay.vue
client/src/components/stocks/: Price.vue
client/src/views/: About.vue  Compilerbau2.vue  Evaluations.vue  Games.vue  Home.vue  Login.vue  News.vue  NotFound.vue  Quiz.vue  Stocks.vue
server/: .gitignore  Cargo.toml  README.md
server/data/: compilerbau2.txt  wasmagrudi
server/migrations/2019-09-21-201837_create_news/: down.sql  up.sql
server/migrations/2019-09-23-012432_create_user/: up.sql
server/src/: db.rs  main.rs
server/src/messages/: mod.rs  resperror.rs  response.rs  responsemessage.rs  respresult.rs
server/src/models/: mod.rs  news.rs  quiz.rs  schema.rs  user.rs
server/src/routes/: auth.rs  compilerbau2vorschlaege.rs  mod.rs  news.rs  quiz.rs
