[package]
name = "server"
version = "0.1.0"
authors = ["Martin Benz <martin.benz@uni-ulm.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_cors="0.5.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = { version= "0.4", features = ["serde"]}
diesel = { version = "1.4.6", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
postgres = {version = "0.15", features = ["with-chrono"]}
rand = "0.7.2"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "diesel_postgres_pool"]
